[package]
name = "simple-jwt"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.39", default-features = false, features = ["now"] }
jsonwebtoken = { version = "9.3.1", default-features = false }
serde = { version = "1.0.217", default-features = false, features = ["derive"] }
uuid = { version = "1.12.1", default-features = false, features = ["v4", "serde"] }